# FontyDE

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: FYDE_FORMAT.md  TABLES.md  TYPE1.md
src/: detector.cpp  main.cpp
src/emitter/: fyde_emitter.cpp
src/formats/: afm.cpp  angelcode.cpp  bdf.cpp  fnt.cpp  pcf.cpp  psf.cpp  svgfont.cpp  ttf.cpp  type1.cpp  woff.cpp  woff2.cpp
src/tables/: cff.cpp  cmap.cpp  glyf.cpp  head.cpp  hhea.cpp  hmtx.cpp  kern.cpp  loca.cpp  maxp.cpp  name.cpp  os2.cpp  post.cpp
web/: pre.js  shell.html
